# sitemap-generator

./: .gitignore  DETAIL-PANEL-PLAN.md  LICENSE  README.de.md  README.md  bootstrap.ps1  bootstrap.sh  build-dist.bat  build-dist.sh  compile-linux.sh  compile-macos.sh  compile-win64.ps1  install.ps1  install.sh  pyproject.toml  run.bat  run.ps1  run.sh  setup-dev-environment.bat  setup-dev-environment.sh
.github/workflows/: release.yml
docs/: index.html
docs/css/: precision.css
docs/js/: theme.js
src/playwright_sitemap_generator/: __init__.py  __main__.py  app.py  app.tcss
src/playwright_sitemap_generator/models/: crawl_result.py  robots.py  settings.py  sitemap_writer.py
src/playwright_sitemap_generator/screens/: about.py
src/playwright_sitemap_generator/services/: crawler.py
src/playwright_sitemap_generator/widgets/: stats_panel.py  summary_panel.py  url_table.py
src/sitemap_generator/: __init__.py  __main__.py  app.py  app.tcss  i18n.py
src/sitemap_generator/locale/: de.json  en.json
src/sitemap_generator/models/: crawl_result.py  history.py  settings.py  sitemap_reader.py  sitemap_writer.py
src/sitemap_generator/screens/: about.py  history.py  settings.py  tree.py
src/sitemap_generator/services/: crawler.py  preview_service.py  reporter.py
src/sitemap_generator/widgets/: page_tree.py  preview_panel.py  stats_panel.py  summary_panel.py  url_table.py
