[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-sitemap-generator"
version = "1.0.0"
description = "Playwright-powered Sitemap Generator with TUI"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.85.0",
    "playwright>=1.40.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
playwright-sitemap-generator = "playwright_sitemap_generator.__main__:main"
