[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sitemap-generator"
version = "1.3.0"
description = "Sitemap Generator with TUI - crawls websites and generates sitemap.xml"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.85.0",
    "playwright>=1.40.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "textual-themes @ git+https://github.com/michaelblaess/textual-themes.git",
]

[project.scripts]
sitemap-generator = "sitemap_generator.__main__:main"
